@@ -1,3 +1,8 @@
+2006-06-06  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/samplerate.c src/src_linear.c src/src_sinc.c
+    Fix MSVC compiler warnings.
+
 2006-05-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * tests/calc_snr.c
